# jamwithai-arxiv-paper-curator

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py  database.py  main.py
src/db/: factory.py
src/db/interfaces/: base.py
src/db/postgresql/: config.py  connection.py
src/models/: paper.py
src/repositories/: paper.py
src/routers/: papers.py  ping.py
src/schemas/: health.py  paper.py
