[project]
name = "jamwithai-arxiv-paper-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "opensearch-py>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
]
